[package]
name = "rust_hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
rand = "0.8.5"
reqwest = "0.11.14"
tokio = { version ="1", features = [ "macros", "rt-multi-thread"]}

[lib]
path = "src/lib.rs"
name = "rust_hub"
